--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,24 @@
 <h1>Widgets</h1>
+
+<%= form_tag({:controller=>"home", :action=>"index"}, method: :get) do %>
+  <%= text_field_tag :term %>
+  <%= submit_tag 'Search Widgets' %>
+<% end %>
+
 <% if @widgets.any? %>
-  <% @widgets.each do |widget| %>
-    <p><%= widget["name"] %> <%= widget["user"]["name"] %></p>
-  <% end %>
+  <table>
+	  <tr>
+	    <th>Name</th>
+	    <th>User Name</th>
+	  </tr>
+
+	  <% @widgets.each do |widget| %>
+	    <tr>
+	      <td><%= widget["name"] %></td>
+	      <td><%= link_to widget["user"]["name"], users_index_path(user_id: widget["user"]["id"]) %></td>
+	    </tr>
+	  <% end %>
+	</table>
 <% else %>
 	<p>There were no widgets found.</p>
 <% end %>
